--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="no_text_recognized">No text recognized!</string>
     <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
     <string name="image_processing_failed">Image classifier failed to initialize. See error logs for details</string>
+    <string name="element_text">Prediction History</string>
 
 </resources>
