--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
     <string name="image_processing_failed">Image classifier failed to initialize. See error logs for details</string>
     <string name="element_text">Prediction History</string>
+    <string name="articles">Articles</string>
 
 </resources>
